--- a/imagepicker/build.gradle
+++ b/imagepicker/build.gradle
@@ -38,9 +38,9 @@ ext {
 
     libraryVersion = '1.0.0'
 
-    developerId = 'developerId'
-    developerName = 'Developer Name'
-    developerEmail = 'developer@email.com'
+    developerId = 'chetan-ram'
+    developerName = 'Chetan Ram'
+    developerEmail = 'chetan@acquaintsoft.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -55,3 +55,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
