--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
@@ -22,7 +22,12 @@ allprojects {
         jcenter()
     }
 }
+ext {
+    compileSdkVersion = 27
+    targetSdkVersion = 27
+    supportLibraryVersion = '27.1.1'
 
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
